package module_spain;

/**
 * @author Bruno Ferrari Vincensi
 */
public abstract class Person {

    private String name;

    public Person(String name) {
        this.name = name;
    }

    public Person() {
    }

    public String getName() {
        return name;
    }

    public void setName(String name) {
        this.name = name;
    }
}
