@startuml

title __SPAIN_PROJECT's Class Diagram__\n

  namespace module_spain {
    class module_spain.App {
    }
  }
  

  namespace module_spain {
    abstract class module_spain.Person {
    }
  }
  

  namespace module_spain {
    class module_spain.Player {
    }
  }
  

  namespace module_spain {
    class module_spain.PressOfficer {
    }
  }
  

  namespace module_spain {
    class module_spain.Spain {
    }
  }
  

  namespace module_spain {
    class module_spain.SpainDAO {
    }
  }
  

  namespace module_spain {
    class module_spain.SpainStats {
    }
  }
  

  namespace module_spain {
    class module_spain.TechnicalCommittee {
    }
  }
  

  module_spain.Player -up-|> module_spain.Person
  module_spain.PressOfficer -up-|> module_spain.Person
  module_spain.Spain .up.|> fifa.NationalTeamInfos
  module_spain.Spain o-- module_spain.SpainDAO : spainDAO
  module_spain.SpainStats .up.|> fifa.NationalTeamStats
  module_spain.TechnicalCommittee -up-|> module_spain.Person


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
